--- a/U6_A2/index.html
+++ b/U6_A2/index.html
@@ -3,7 +3,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@399&display=swap" class="yeah" rel="stylesheet">
-	<link href="CGstyles.css" rel="stylesheet" type="text/css">
+	<link href="Styling/CGstyles.css" rel="stylesheet" type="text/css">
 	<title>Celtec Games -- Home Page</title>
 	<!--change above -->
 	<a href="index.html"> <img src="images/banner.png" alt ="Celtec Games banner" width=30% class="image-hover" ID="Banner"> </a>
