--- a/U6_A2/contact.html
+++ b/U6_A2/contact.html
@@ -44,10 +44,6 @@
 				  <label for="inquiries"><b>Comments</b></label><br />
 				  <input type="text" placeholder="Enter Your Inquiries" name="inquiries" id="inquiries" required /><br /><br />
 				</div>
-	  
-				<p class="form-disclaimer">
-				  By submitting a query you are agreeing to our <a href="#">Terms & Privacy</a>.
-				</p>
 				<button type="submit" class="registerbtn">Submit</button>
 			  </div>
 			</form>
@@ -81,12 +77,14 @@
       
     </section>
     <section class="section">
-      <h2>Latest Products</h2>
-      
-	  <p> Product List </p>
-	  
-	 
+      <h1>Latest Products</h1>
+	  <p>thease products were added recently</p>
+	  <p>Minecraft</p>
+	  <p>Shovel Knight</p>
+	  <p>Stardew Valley</p>
+	  <p>Hollow Kinght</p>
     </section>
+
     <section class="section">
       <h2>Help And Support</h2>
 	  <p>if your having problems please do not be afraid to check out our contact page to find your answer.<p>
