--- a/U6_A2/aboutus.html
+++ b/U6_A2/aboutus.html
@@ -57,12 +57,15 @@
       
     </section>
     <section class="section">
-      <h2>Latest Products</h2>
-      
-	  <p> Product List </p>
+		<section class="section">
+			<h1>Latest Products</h1>
+			<p>thease products were added recently</p>
+			<p>Minecraft</p>
+			<p>Shovel Knight</p>
+			<p>Stardew Valley</p>
+			<p>Hollow Kinght</p>
+		  </section>
 	  
-	 
-    </section>
     <section class="section">
       <h2>Help And Support</h2>
 	  <p>if your having problems please do not be afraid to check out our contact page to find your answer.<p>
