--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body >
 <div id="main" >
 	<div class="container4">
-		<section class="section4" style="padding-left: 100px; padding-right: 100px;">
-			<p style="font-size: 20px;"> Celtec Games is an innovative independent video game developer dedicated to crafting original titles for desktop, mobile and all major platforms. Based in Wrexham, North East Wales, we merge creativity with technical expertise to develop engaging games that captivate players of all ages. Our portfolio includes...</p>
-		<button><a href="aboutus.html"> Find More </a></button>
+		<section class="section4" style=" height: fit-content; padding-left: 100px; padding-right: 100px;">
+			<p style="font-size: 17px;"></p>Celtec Games is a small indi-game creation company. we strive in the quality of our games and the major colabaration we have given to other popular games creators such as mojang and team cherry. We are located in Wales and are welcoming to all people. Celtec Games is an innovative independent video game developer dedicated to crafting original titles for desktop, mobile and all major platforms. Based in Wrexham, North East Wales, we merge creativity with technical expertise to develop engaging games that captivate players of all ages. Our portfolio includes...</p>
+			<a href="aboutus.html"><button> Find More </button></a>
 		</section>
 		<section class="section4">
 			<img src="images/index1.jpg"alt="Image of Minecraft">
@@ -42,12 +42,14 @@
       
     </section>
     <section class="section">
-      <h2>Latest Products</h2>
-      
-	  <p> Product List </p>
-	  
-	 
-    </section>
+		<h1>Latest Products</h1>
+		<p>thease products were added recently</p>
+		<p>Minecraft</p>
+		<p>Shovel Knight</p>
+		<p>Stardew Valley</p>
+		<p>Hollow Kinght</p>
+	  </section>
+  
     <section class="section">
       <h2>Help And Support</h2>
 	  <p>if your having problems please do not be afraid to check out our contact page to find your answer.<p>
