--- a/U6_A2/products.html
+++ b/U6_A2/products.html
@@ -84,7 +84,7 @@
 
     <section class="section">
       <h2>Help And Support</h2>
-	  <p>if your having problems please do not be afraid to check out our contact page to find your answer.<p>
+	  <p>If your having problems please do not be afraid to check out our contact page to find your answer.<p>
 	  <b><a href="contact.html">Contact Us</a></b>
 	 
 	  
