--- a/U6_A2/index.html
+++ b/U6_A2/index.html
@@ -21,8 +21,8 @@
 <div id="main" >
 	<div class="container4">
 		<section class="section4" style=" height: fit-content; padding-left: 100px; padding-right: 100px;">
-			<p style="font-size: 17px;"></p>Celtec Games is a small indi-game creation company. we strive in the quality of our games and the major colabaration we have given to other popular games creators such as mojang and team cherry. We are located in Wales and are welcoming to all people. Celtec Games is an innovative independent video game developer dedicated to crafting original titles for desktop, mobile and all major platforms. Based in Wrexham, North East Wales, we merge creativity with technical expertise to develop engaging games that captivate players of all ages. Our portfolio includes...</p>
-		<button><a href="aboutus.html"> Find More </a></button>
+			<p style="font-size: 17px;"></p>Celtec Games is a small indie-game creation company. We strive in the quality of our games and the major collaboration we have given to the other popular game's creators such as Morgan and team cherry. We are located in Wales and are welcoming to all people. Celtec Games is an innovative independent video game developer dedicated to crafting original titles for desktop, mobile and all major platforms. Based in Wrexham, North East Wales, we merge creativity with technical expertise to develop engaging games that captivate players of all ages. Our portfolio includes...</p>
+			<a href="aboutus.html"><button> Find More </button></a>
 		</section>
 		<section class="section4">
 			<img src="images/index1.jpg"alt="Image of Minecraft">
