--- a/U6_A2/products.html
+++ b/U6_A2/products.html
@@ -39,7 +39,7 @@
     </section>
     <section class="section2">
       <h2>Shovel Knight</h2>
-      <img src="images/products2.jpg">
+      <img src="images/products2.png">
 	  <a href="https://www.amazon.co.uk/Avanquest-Software-SVK-3DS-Shovel-Nintendo/dp/B013SRS7CY"><button>Official Page</button></a>
 
     </section>
