--- a/U6_A2/aboutus.html
+++ b/U6_A2/aboutus.html
@@ -6,6 +6,7 @@
 	<link href="Styling/CGstyles.css" rel="stylesheet" type="text/css">
 	<title>Celtec Games -- About Us</title>
 	<link rel="icon" type="image/png" href="banner.png"/>
+	<meta name="description" content="Celtecs offical Website">
 	<!--change above -->
 	<a href="index.html"> <img src="images/banner.png" alt ="Celtec Games banner" width=30% class="image-hover" ID="banner"> </a>
 <div id="navigation">
@@ -28,8 +29,8 @@
          <!-- Each FAQ item consists of a button and a hidden answer that toggles on click -->
         <div class="section4" style=" width: 800px; height: fit-content;" class="faq-item">
 			<p style="font-size:20px;">Celtec Games is an innovative independent video game developer dedicated to crafting original titles for desktop, mobile and all major platforms. Based in Wrexham, North East Wales, we merge creativity with technical expertise to develop engaging games that captivate players of all ages. Our portfolio includes games for mobile (iOS, Android), desktop, and major consoles (PlayStation, Xbox, Nintendo Switch).</p>
-          <button class="faq-question">What platforms do your games support?</button>
-          <div class="faq-answer" style="display: none;">	<img src="images/aboutus1.jfif" width="400px" style="margin: 0px; padding: 10px;" alt="Image of Minecraft"></div>
+          <button class="faq-question">Image</button>
+          <div class="faq-answer" style="display: none;">	<img src="images/index1.jpg" width="400px" style="margin: 0px; padding: 10px;" alt="Image People playing games"></div>
         </div>
 	  </section>
 	  <section class="faq-item">
@@ -37,8 +38,8 @@
 		<!-- Each FAQ item consists of a button and a hidden answer that toggles on click -->
 	   <div class="section4" style=" width: 800px; height: fit-content;" class="faq-item">
 		   <p style="font-size:20px;">At Celtec Games, we believe that the heart of game development lies in creativity, collaboration, and a shared vision. Our team is composed of talented individuals who are passionate about gaming and committed to producing high-quality entertainment. We strive to create a workplace culture that fosters innovation and inclusivity, ensuring that every voice is heard and valued.</p>
-		 <button class="faq-question">What platforms do your games support?</button>
-		 <div class="faq-answer" style="display: none;">	<img src="images/aboutus2.avif" style="margin: 0px; padding: 10px;" width="400px" alt="Image of Minecraft"></div>
+		 <button class="faq-question">Image</button>
+		 <div class="faq-answer" style="display: none;">	<img src="images/aboutus2.avif" style="margin: 0px; padding: 10px;" width="400px" alt="Image People playing games"></div>
 	   </div>
 	 </section>
 	</div>
@@ -56,15 +57,13 @@
 	  
       
     </section>
-		<section class="section">
-			<h1>Latest Products</h1>
-			<p>thease products were added recently</p>
-			<p>Minecraft</p>
-			<p>Shovel Knight</p>
-			<p>Stardew Valley</p>
-			<p>Hollow Kinght</p>
-		  </section>
+    <section class="section">
+      <h2>Latest Products</h2>
+      
+	  <p> Product List </p>
 	  
+	 
+    </section>
     <section class="section">
       <h2>Help And Support</h2>
 	  <p>if your having problems please do not be afraid to check out our contact page to find your answer.<p>
