--- a/U6_A2/contact.html
+++ b/U6_A2/contact.html
@@ -5,7 +5,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@399&display=swap" class="yeah" rel="stylesheet">
 	<link href="Styling/CGstyles.css" rel="stylesheet" type="text/css">
 	<link href="Styling/contact.css" rel="stylesheet" type="text/css">
-	<title>Celtec Games -- Blog</title>
+	<title>Celtec Games -- Contact Us</title>
+	<meta name="description" content="Celtecs offical Website">
 	
 	<!--change above -->
 	<a href="index.html"> <img src="images/banner.png" alt ="Celtec Games banner" width=30% class="image-hover" ID="Banner"> </a>
@@ -37,9 +38,6 @@
 	  
 				  <label for="email"><b>Email</b></label><br />
 				  <input type="email" placeholder="Enter Email" name="email" id="email" required /><br /><br />
-	  
-				  <label for="telnum"><b>Phone Number</b></label><br />
-				  <input type="tel" placeholder="Enter Phone Number" name="telnum" id="telnum" pattern="[0-9\s\-\+\(\)]+" title="Please enter a valid phone number" required /><br /><br />            
 	  
 				  <label for="inquiries"><b>Comments</b></label><br />
 				  <input type="text" placeholder="Enter Your Inquiries" name="inquiries" id="inquiries" required /><br /><br />
