--- a/U6_A2/index.html
+++ b/U6_A2/index.html
@@ -5,6 +5,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@399&display=swap" class="yeah" rel="stylesheet">
 	<link href="Styling/CGstyles.css" rel="stylesheet" type="text/css">
 	<title>Celtec Games -- Home Page</title>
+	<meta name="description" content="Celtecs offical Website">
 	<!--change above -->
 	<a href="index.html"> <img src="images/banner.png" alt ="Celtec Games banner" width=30% class="image-hover" ID="Banner"> </a>
 <div id="navigation">
@@ -21,11 +22,11 @@
 <div id="main" >
 	<div class="container4">
 		<section class="section4" style=" height: fit-content; padding-left: 100px; padding-right: 100px;">
-			<p style="font-size: 17px;"></p>Celtec Games is a small indie-game creation company. We strive in the quality of our games and the major collaboration we have given to the other popular game's creators such as Morgan and team cherry. We are located in Wales and are welcoming to all people. Celtec Games is an innovative independent video game developer dedicated to crafting original titles for desktop, mobile and all major platforms. Based in Wrexham, North East Wales, we merge creativity with technical expertise to develop engaging games that captivate players of all ages. Our portfolio includes...</p>
-			<a href="aboutus.html"><button> Find More </button></a>
+			<p style="font-size: 17px;"></p>Celtec Games is a small indi-game creation company. we strive in the quality of our games and the major colabaration we have given to other popular games creators such as mojang and team cherry. We are located in Wales and are welcoming to all people. Celtec Games is an innovative independent video game developer dedicated to crafting original titles for desktop, mobile and all major platforms. Based in Wrexham, North East Wales, we merge creativity with technical expertise to develop engaging games that captivate players of all ages. Our portfolio includes...</p>
+		<button><a href="aboutus.html"> Find More </a></button>
 		</section>
 		<section class="section4">
-			<img src="images/index1.jpg"alt="Image of Minecraft">
+			<img src="images/index1.jpg"alt="Image of people playing games with controlers">
 		</section>
 		</div>
 	</div>
@@ -42,14 +43,12 @@
       
     </section>
     <section class="section">
-		<h1>Latest Products</h1>
-		<p>thease products were added recently</p>
-		<p>Minecraft</p>
-		<p>Shovel Knight</p>
-		<p>Stardew Valley</p>
-		<p>Hollow Kinght</p>
-	  </section>
-  
+      <h2>Latest Products</h2>
+      
+	  <p> Product List </p>
+	  
+	 
+    </section>
     <section class="section">
       <h2>Help And Support</h2>
 	  <p>if your having problems please do not be afraid to check out our contact page to find your answer.<p>
