--- a/U6_A2/products.html
+++ b/U6_A2/products.html
@@ -75,11 +75,12 @@
       
     </section>
     <section class="section">
-      <h2>Latest Products</h2>
-      
-	  <p> Product List </p>
-	  
-	 
+      <h1>Latest Products</h1>
+	  <p>thease products were added recently</p>
+	  <p>Minecraft</p>
+	  <p>Shovel Knight</p>
+	  <p>Stardew Valley</p>
+	  <p>Hollow Kinght</p>
     </section>
     <section class="section">
       <h2>Help And Support</h2>
